Fix header overflow bug

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
 }
 
 .header .lower .left .bigger {
-    font-size: 27px;
+    font-size: 23px;
 }
 
 .header .lower .right {
